# makefiles-playground

./: TODO.Md
01-basics/: Makefile  Makefile.v2  Makefile.v3  Makefile.v4
02-deps/: Makefile  Makefile.dep  mymodule.c
03-autotools/: Makefile.am  TOC.md  configure.ac  mymodule.h  myprog.c
04-autotools-advanced/: Makefile.am  TOC.md  configure.ac  mymodule.c  mymodule.h  myprog.c  test_mymodule.c
